project page and news updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a href="#research">
                         <p class="panel-cover__description">Research</p>
                     </a>
-                     <br>
+                    <br>
                     <a href="#activies">
                         <p class="panel-cover__description">Activities</p>
                     </a>
@@ -85,11 +85,12 @@
                                     </a>
                                 </li>
 
-                                  <!-- Google Scholar -->
+                                <!-- Google Scholar -->
                                 <li class="navigation__item">
-                                    <a href="https://scholar.google.com.tr/citations?user=5GQk5LUAAAAJ&hl" title="Google Scholar"
+                                    <a href="https://scholar.google.com.tr/citations?user=5GQk5LUAAAAJ&hl"
+                                       title="Google Scholar"
                                        target="_blank">
-                                         <i class="icon icon-book-bookmark"></i>
+                                        <i class="icon icon-book-bookmark"></i>
                                         <span class="label">Google Scholar</span>
                                     </a>
                                 </li>
@@ -160,10 +161,13 @@
                     </h2>
                     <p class="excerpt">
                     <p>I am a PhD student at <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team in <a
-                            href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a> working with <a
+                            href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a>
+                        working with <a
                                 href="https://avrithis.net/">Yannis Avrithis</a> and <a
                                 href="http://people.rennes.inria.fr/Teddy.Furon">Teddy Furon</a>.
-                        I have received my BS and MS degrees from Electronics Engineering at <a href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research is focused on multi-modal video understanding, specifically video question answering.</p>
+                        I have received my BS and MS degrees from Electronics Engineering at <a
+                                href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research is
+                        focused on multi-modal video understanding, specifically video question answering.</p>
                     <hr class="post-list__divider">
                 </li>
 
@@ -184,29 +188,38 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
-                     <li>Aug. 2023 - Paper on <a href="https://engindeniz.github.io/vitis">zero-shot and few-shot VideoQA</a> accepted at <a href="https://iccv-clvl.github.io/2023/">ICCV23 Workshop on
-                            Closing the Loop Between Vision and Language</a>.
+                        <li>Oct. 2023 - <a href="https://github.com/engindeniz/vitis">ViTiS</a> code released.
                         </li>
-                    <li>Nov. 2022 - I visited <a href="https://www.iarai.ac.at/">IARAI</a> for two weeks.
+                        <li>Sep. 2023 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2309.15915">ViTiS</a>.
                         </li>
-                    <li>Jul. 2022 - I participated in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
+                        <li>Aug. 2023 - <a href="https://engindeniz.github.io/vitis">ViTiS</a> accepted at <a
+                                href="https://iccv-clvl.github.io/2023/">ICCV 2023 CLVL Workshop</a> as an oral.
                         </li>
-                    <li>Jul. 2022 - I presented <a href="https://arxiv.org/abs/2103.14517">VideoQA</a> paper at <a href="https://caprfiap2022.sciencesconf.org/">CAp & RFIAP 2022</a>.
+                        <li>Nov. 2022 - I visited <a href="https://www.iarai.ac.at/">IARAI</a> for two weeks.
                         </li>
-                        <li>Oct. 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">VideoQA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on
-                            Closing the Loop Between Vision and Language</a>.
+                        <li>Jul. 2022 - I participated in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
+                        </li>
+                        <li>Jul. 2022 - I presented <a href="https://arxiv.org/abs/2103.14517">VideoQA</a> paper at <a
+                                href="https://caprfiap2022.sciencesconf.org/">CAp & RFIAP 2022</a> as an oral.
+                        </li>
+                        <li>Oct. 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">VideoQA</a> paper at <a
+                                href="https://sites.google.com/view/iccv21clvl/"> ICCV 2021 CLVL Workshop</a>.
                         </li>
 
-                        <li>Sep. 2021 - I participated in <a href="https://ellis.eu/events/ellis-doctoral-symposium">ELLIS Doctoral Symposium 2021</a>.
+                        <li>Sep. 2021 - I participated in <a href="https://ellis.eu/events/ellis-doctoral-symposium">ELLIS
+                            Doctoral Symposium 2021</a>.
                         </li>
-                        <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">VideoQA</a> code released.
+                        <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Knowledge-based
+                            VideoQA</a> code released.
                         </li>
-                        <li>Jul. 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">VideoQA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021</a>.
+                        <li>Jul. 2021 - <a href="https://engindeniz.github.io/dialogsummary-videoqa">Knowledge-based
+                            VideoQA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021</a>.
                         </li>
                         <li>Jul. 2021 - I participated in <a href="https://project.inria.fr/paiss/paiss-2021/">PAISS
                             2021</a>.
                         </li>
-                        <li>Mar. 2021 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2103.14517">VideoQA</a>.
+                        <li>Mar. 2021 - Preprint released at arXiv: <a
+                                href="https://arxiv.org/abs/2103.14517">Knowledge-based VideoQA</a>.
                         </li>
                         <li>Sep. 2020 - Starting my PhD at INRIA and InterDigital.</li>
                         <li>Apr. 2020 - Paper on <a
@@ -236,22 +249,22 @@
                 <p>See <a href="https://scholar.google.com.tr/citations?user=5GQk5LUAAAAJ&hl">Google Scholar</a>
                     for all publications.</p>
 
-                 <li>
+                <li>
                     <p class="excerpt">
                     <div class="two-col-row">
                         <div><img src="images/vitis_method_overview.png" height="300px" width="500px"/></div>
                         <div class="right-col">
-                                <a href="https://arxiv.org/abs/2309.15915">Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts
-                            </a>
+                            <strong>Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts</strong>
                             <br/>
-                            <strong>Deniz Engin</strong>,
-                            <a href="https://avrithis.net/">Yannis Avrithis</a>
+                            <u>Deniz Engin</u>,
+                            Yannis Avrithis
                             <br/>
                             ICCV Workshops 2023 <strong>[Oral Presentation]</strong><br/>
+                            <a class="abstract">abstract</a> |
+                            <a href="https://arxiv.org/abs/2309.15915">pdf</a> |
                             <a href="https://engindeniz.github.io/vitis">project page</a> |
-                            <a href="https://arxiv.org/abs/2309.15915">arXiv</a> |
-                            <a href="https://github.com/engindeniz/vitis">code</a> | <a
-                                class="abstract">abstract</a>
+                            <a href="https://github.com/engindeniz/vitis">code</a>
+
                         </div>
                     </div>
                     </p>
@@ -262,16 +275,35 @@
                         <div class="right-col">
                             <p class="excerpt">
                             <p>Recent vision-language models are driven by large-scale pretrained
-                        models. However, adapting pretrained models on limited data presents challenges such as
-                        overfitting, catastrophic forgetting, and the cross-modal gap between vision and language. We
-                        introduce a parameter-efficient method to address these challenges, combining multimodal prompt
-                        learning and a transformer-based mapping network, while keeping the pretrained models frozen.
-                        Our experiments on several video question answering benchmarks demonstrate the superiority of
-                        our approach in terms of performance and parameter efficiency on
-                        both zero-shot and few-shot settings.</p>
+                                models. However, adapting pretrained models on limited data presents challenges such as
+                                overfitting, catastrophic forgetting, and the cross-modal gap between vision and
+                                language. We
+                                introduce a parameter-efficient method to address these challenges, combining multimodal
+                                prompt
+                                learning and a transformer-based mapping network, while keeping the pretrained models
+                                frozen.
+                                Our experiments on several video question answering benchmarks demonstrate the
+                                superiority of
+                                our approach in terms of performance and parameter efficiency on
+                                both zero-shot and few-shot settings.</p>
                             </p>
                         </div>
                     </div>
+
+<!--                    <div class="bibtex">-->
+<!--                        <div style="width:50%">-->
+<!--                        </div>-->
+<!--                        <div class="right-col">-->
+<!--                            <p class="excerpt">-->
+<!--                            <p>@inproceedings{engin_2023_ICCV,-->
+<!--                                title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},-->
+<!--                                author={Engin, Deniz and Avrithis, Yannis},-->
+<!--                                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision-->
+<!--                                (ICCV) Workshops},-->
+<!--                                year={2023}</p>-->
+<!--                            </p>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
                 </li>
 
@@ -280,19 +312,18 @@
                     <div class="two-col-row">
                         <div><img src="images/dialogsummary_videoqa.png" height="180px" width="400px"/></div>
                         <div class="right-col">
-                            <a href="https://arxiv.org/abs/2103.14517">On the hidden treasure of dialog in video
+                            <strong>On the hidden treasure of dialog in video
                                 question answering
-                            </a>
+                            </strong>
                             <br/>
-                            <strong>Deniz Engin</strong>,<a href="https://sites.google.com/site/francoisschnitzler/">François
-                            Schnitzler</a>, <a href="https://www.interdigital.com/talent/?id=88">Ngoc Q. K. Duong</a>,
-                            <a href="https://avrithis.net/">Yannis Avrithis</a>
+                            <u>Deniz Engin</u>, François Schnitzler, Ngoc Q. K. Duong, Yannis Avrithis
                             <br/>
                             ICCV 2021<br/>
+                             <a
+                                class="abstract">abstract</a> |
+                            <a href="https://arxiv.org/abs/2103.14517">pdf</a> |
                             <a href="https://engindeniz.github.io/dialogsummary-videoqa">project page</a> |
-                            <a href="https://arxiv.org/abs/2103.14517">arXiv</a> |
-                            <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">code</a> | <a
-                                class="abstract">abstract</a>
+                            <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">code</a>
                         </div>
                     </div>
                     </p>
@@ -329,12 +360,11 @@
                             <img src="images/signatureVerification.png" height="300px" width="400px"/>
                         </div>
                         <div class="right-col">
-                            <a href="https://arxiv.org/abs/2004.12104">Offline Signature Verification on Real-World
-                                Documents</a>
-                            <br/><strong>Deniz Engin*</strong>, Alperen Kantarcı*, Seçil Arslan, <a
-                                href="https://web.itu.edu.tr/ekenel/">Hazım Kemal Ekenel</a><br/>
+                            <strong>Offline Signature Verification on Real-World Documents</strong>
+                            <br/><u>Deniz Engin*</u>, Alperen Kantarcı*, Seçil Arslan, Hazım Kemal Ekenel<br/>
                             CVPR Workshops 2020<br/>
-                            <a href="https://arxiv.org/abs/2004.12104">arXiv</a> | <a class="abstract">abstract</a>
+                            <a class="abstract">abstract</a> |
+                            <a href="https://arxiv.org/abs/2004.12104">pdf</a>
                         </div>
                     </div>
                     </p>
@@ -373,15 +403,14 @@
                     <div class="two-col-row">
                         <div><img src="images/cycle.png" height="180px" width="400px"/></div>
                         <div class="right-col">
-                            <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Engin_Cycle-Dehaze_Enhanced_CycleGAN_CVPR_2018_paper.pdf">Cycle-Dehaze:
-                                Enhanced CycleGAN for Single Image Dehazing</a>
+                            <strong>Cycle-Dehaze: Enhanced CycleGAN for Single Image Dehazing</strong>
                             <br/>
-                            <strong>Deniz Engin*</strong>, Anıl Genç*, <a href="https://web.itu.edu.tr/ekenel/">Hazım
-                            Kemal Ekenel</a>
+                            <strong>Deniz Engin*</strong>, Anıl Genç*, Hazım Kemal Ekenel
                             <br/>
                             CVPR Workshops 2018<br/>
-                            <a href="https://arxiv.org/abs/1805.05308">arXiv</a> |
-                            <a href="https://github.com/Deniz.Enginniz/Cycle-Dehaze">code</a> | <a class="abstract">abstract</a>
+                            <a class="abstract">abstract</a> |
+                            <a href="https://arxiv.org/abs/1805.05308">pdf</a> |
+                            <a href="https://github.com/Deniz.Enginniz/Cycle-Dehaze">code</a>
                         </div>
                     </div>
                     </p>
@@ -418,15 +447,13 @@
                             <img src="images/posenormalization.png" height="210px" width="450px"/>
                         </div>
                         <div class="right-col">
-                            <br/><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8553087">Face
-                            Frontalization for Cross-Pose Facial Expression Recognition</a>
+                            <strong>Face Frontalization for Cross-Pose Facial Expression Recognition</strong>
                             <br/>
-                            <strong>Deniz Engin</strong>, Christophe Ecabert, <a href="https://web.itu.edu.tr/ekenel/">Hazım
-                            Kemal Ekenel</a>, <a href="https://people.epfl.ch/jean-philippe.thiran">Jean-Philippe
-                            Thiran</a>
+                            <strong>Deniz Engin</strong>, Christophe Ecabert, Hazım Kemal Ekenel, Jean-Philippe Thiran
                             <br/>
                             EUSIPCO 2018<br/>
-                            <a class="abstract">abstract</a>
+                            <a class="abstract">abstract</a> |
+                            <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8553087">pdf</a>
                         </div>
                     </div>
                     </p>
@@ -476,11 +503,13 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
-                    <li>[2023] - Reviewer at <a href="https://cvpr2023.thecvf.com/">CVPR</a>, <a href="https://iccv2023.thecvf.com/">ICCV</a>.
+                        <li>[2023] - Reviewer at <a href="https://cvpr2023.thecvf.com/">CVPR</a>, <a
+                                href="https://iccv2023.thecvf.com/">ICCV</a>.
                         </li>
-                    <li>[2022] - Reviewer at <a href="https://eccv2022.ecva.net/">ECCV</a>.
+                        <li>[2022] - Reviewer at <a href="https://eccv2022.ecva.net/">ECCV</a>.
                         </li>
-                      <li>[2021] - Reviewer at <a href="https://2021.ieeeicme.org/2021.ieeeicme.org/index.html">ICME</a>.
+                        <li>[2021] - Reviewer at <a
+                                href="https://2021.ieeeicme.org/2021.ieeeicme.org/index.html">ICME</a>.
                         </li>
 
 
