--- a/vitis.html
+++ b/vitis.html
@@ -52,8 +52,9 @@
                 <!--                  </ol>-->
                 <!--                <ol>-->
                 <li>
-                    <div class="two-col-row top-authors">
+                    <div class="top-authors" style="padding-bottom: 15px">
                         <div style="margin: auto"><a href="https://arxiv.org/abs/2309.15915">Paper</a></div>
+                         <div style="margin: auto"><a href="posters/ViTiS_poster.pdf">Poster</a></div>
                         <div style="margin: auto"><a href="https://github.com/engindeniz/vitis">Code</a>
                         </div>
                     </div>
