--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                             CVPR Workshops 2018<br/>
                             <a class="abstract">abstract</a> |
                             <a href="https://arxiv.org/abs/1805.05308">pdf</a> |
-                            <a href="https://github.com/Deniz.Enginniz/Cycle-Dehaze">code</a>
+                            <a href="https://github.com/engindeniz/Cycle-Dehaze">code</a>
                         </div>
                     </div>
                     </p>
