email address updated

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                                 <!-- Email -->
                                 <li class="navigation__item">
-                                    <a href="mailto:deniz.engin@inria.fr" title="Email to Deniz Engin" target="_blank">
+                                    <a href="mailto:denizengin255@gmail.com" title="Email to Deniz Engin" target="_blank">
                                         <i class="icon icon-mail"></i>
                                         <span class="label">Email</span>
                                     </a>
