--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <li>Aug. 2023 - <a href="https://engindeniz.github.io/vitis">ViTiS</a> accepted at <a
                                 href="https://iccv-clvl.github.io/2023/">ICCV 2023 CLVL Workshop</a> as an oral.
                         </li>
-                        <li>Nov. 2022 - I visited <a href="https://www.iarai.ac.at/">IARAI</a> for two weeks.
+                        <li>Nov. 2022 - I visited IARAI for two weeks.
                         </li>
                         <li>Jul. 2022 - I participated in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
                         </li>
