phd thesis added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 
                                 <!-- Email -->
                                 <li class="navigation__item">
-                                    <a href="mailto:denizengin255@gmail.com" title="Email to Deniz Engin" target="_blank">
+                                    <a href="mailto:denizengin255@gmail.com" title="Email to Deniz Engin"
+                                       target="_blank">
                                         <i class="icon icon-mail"></i>
                                         <span class="label">Email</span>
                                     </a>
@@ -163,8 +164,7 @@
                     <p>I am a PhD student at <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team in <a
                             href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a>
                         working with <a
-                                href="https://avrithis.net/">Yannis Avrithis</a> and <a
-                                href="http://people.rennes.inria.fr/Teddy.Furon">Teddy Furon</a>.
+                                href="https://avrithis.net/">Yannis Avrithis</a>.
                         I have received my BS and MS degrees from Electronics Engineering at <a
                                 href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research is
                         focused on multi-modal video understanding, specifically video question answering.</p>
@@ -188,6 +188,9 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
+                        <li>Jun. 2024 - I have successfully defended my <a href="thesis/DenizEngin_PhDThesis.pdf">PhD
+                            thesis</a>!
+                        </li>
                         <li>Oct. 2023 - <a href="https://github.com/engindeniz/vitis">ViTiS</a> code released.
                         </li>
                         <li>Sep. 2023 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2309.15915">ViTiS</a>.
@@ -252,6 +255,72 @@
                 <li>
                     <p class="excerpt">
                     <div class="two-col-row">
+                        <div><img src="images/thesis_cover.png" height="270px" width="400px"/></div>
+                        <div class="right-col">
+                            <strong>Video question answering with limited supervision</strong>
+                            <br/>
+                            <u>Deniz Engin</u>
+                            <br/>
+                            PhD Thesis 2024<br/>
+                            <a class="abstract">abstract</a> |
+                            <a href="thesis/DenizEngin_PhDThesis.pdf">pdf</a>
+
+                        </div>
+                    </div>
+                    </p>
+
+                    <div class="abstract">
+                        <div style="width:50%">
+                        </div>
+                        <div class="right-col">
+                            <p class="excerpt">
+                            <p>Video content has significantly increased in volume and diversity in the digital era, and
+                                this expansion has highlighted the necessity for advanced video understanding
+                                technologies that transform vast volumes of unstructured data into practical insights by
+                                learning from data. Driven by this necessity, this thesis explores semantically
+                                understanding videos, leveraging multiple perceptual modes similar to human cognitive
+                                processes and efficient learning with limited supervision similar to human learning
+                                capabilities. Multimodal semantic video understanding synthesizes visual, audio, and
+                                textual data to analyze and interpret video content, facilitating comprehension of
+                                underlying semantics and context. This thesis specifically focuses on video question
+                                answering to understand videos as one of the main video understanding tasks. Our first
+                                contribution addresses long-range video question answering, which involves answering
+                                questions about long videos, such as TV show episodes. These questions require an
+                                understanding of extended video content. While recent approaches rely on human-generated
+                                external sources, we present processing raw data to generate video summaries. Our
+                                following contribution explores zero-shot and few-shot video question answering, aiming
+                                to enhance efficient learning from limited data. We leverage the knowledge of existing
+                                large-scale models by eliminating challenges in adapting pre-trained models to limited
+                                data, such as overfitting, catastrophic forgetting, and bridging the cross-modal gap
+                                between vision and language. We introduce a parameter-efficient method that combines
+                                multimodal prompt learning with a transformer-based mapping network while keeping the
+                                pre-trained vision and language models frozen. We demonstrate that these contributions
+                                significantly enhance the capabilities of multimodal video question-answering systems,
+                                where specifically human-annotated labeled data is limited or unavailable.</p>
+                            </p>
+                        </div>
+                    </div>
+
+                    <!--                    <div class="bibtex">-->
+                    <!--                        <div style="width:50%">-->
+                    <!--                        </div>-->
+                    <!--                        <div class="right-col">-->
+                    <!--                            <p class="excerpt">-->
+                    <!--                            <p>@inproceedings{engin_2023_ICCV,-->
+                    <!--                                title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},-->
+                    <!--                                author={Engin, Deniz and Avrithis, Yannis},-->
+                    <!--                                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision-->
+                    <!--                                (ICCV) Workshops},-->
+                    <!--                                year={2023}</p>-->
+                    <!--                            </p>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
+
+                </li>
+
+                <li>
+                    <p class="excerpt">
+                    <div class="two-col-row">
                         <div><img src="images/vitis_method_overview.png" height="300px" width="500px"/></div>
                         <div class="right-col">
                             <strong>Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts</strong>
@@ -290,20 +359,20 @@
                         </div>
                     </div>
 
-<!--                    <div class="bibtex">-->
-<!--                        <div style="width:50%">-->
-<!--                        </div>-->
-<!--                        <div class="right-col">-->
-<!--                            <p class="excerpt">-->
-<!--                            <p>@inproceedings{engin_2023_ICCV,-->
-<!--                                title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},-->
-<!--                                author={Engin, Deniz and Avrithis, Yannis},-->
-<!--                                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision-->
-<!--                                (ICCV) Workshops},-->
-<!--                                year={2023}</p>-->
-<!--                            </p>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <!--                    <div class="bibtex">-->
+                    <!--                        <div style="width:50%">-->
+                    <!--                        </div>-->
+                    <!--                        <div class="right-col">-->
+                    <!--                            <p class="excerpt">-->
+                    <!--                            <p>@inproceedings{engin_2023_ICCV,-->
+                    <!--                                title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},-->
+                    <!--                                author={Engin, Deniz and Avrithis, Yannis},-->
+                    <!--                                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision-->
+                    <!--                                (ICCV) Workshops},-->
+                    <!--                                year={2023}</p>-->
+                    <!--                            </p>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
 
                 </li>
 
@@ -319,8 +388,8 @@
                             <u>Deniz Engin</u>, François Schnitzler, Ngoc Q. K. Duong, Yannis Avrithis
                             <br/>
                             ICCV 2021<br/>
-                             <a
-                                class="abstract">abstract</a> |
+                            <a
+                                    class="abstract">abstract</a> |
                             <a href="https://arxiv.org/abs/2103.14517">pdf</a> |
                             <a href="https://engindeniz.github.io/dialogsummary-videoqa">project page</a> |
                             <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">code</a>
