--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         About
                     </h2>
                     <p class="excerpt">
-                    <p>I am a PhD student at <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team in <a
+                    <p>I was a PhD student at <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team in <a
                             href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a>
                         working with <a
                                 href="https://avrithis.net/">Yannis Avrithis</a>.
