--- a/dialogsummary-videoqa.html
+++ b/dialogsummary-videoqa.html
@@ -33,7 +33,7 @@
 <body>
 
 <div class="publication-content-wrapper">
-    <div class="content-wrapper__inner">
+    <div class="publication-content-wrapper__inner">
         <h2 class="post-list__post-title post-title header-article"
             style="text-align: center; font-size: 22pt; font-weight: bold; padding-bottom: 10px">On
             the hidden treasure of dialog in video question
@@ -63,7 +63,8 @@
                 <li>
                     <div class="two-col-row top-authors">
                         <div style="margin: auto"><a href="https://arxiv.org/abs/2103.14517">Paper</a></div>
-                        <div style="margin: auto"><a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Code</a></div>
+                        <div style="margin: auto"><a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Code</a>
+                        </div>
                     </div>
                 </li>
                 <!--                <li>-->
@@ -104,9 +105,11 @@
         <h2 class="post-list__post-title post-title header-article">
             Method Overview
         </h2>
-        <div class="two-col-row" style="display: contents">
-            <div>
-                <img src="images/dialogsummary_videoqa.png" style="padding-bottom: 20px"/>
+        <div>
+            <div class="two-col-row-project-page">
+                <div class="image-wrapper-project-page">
+                    <img src="images/dialogsummary_videoqa.png">
+                </div>
             </div>
 
             <p style="text-align: justify">Our VideoQA system converts dialog and video inputs to episode dialog
