--- a/index.html
+++ b/index.html
@@ -84,19 +84,22 @@
                         Deniz Engin
                     </h2>
                     <p class="excerpt">
-                    <p>I am open to new opportunities!</p>
                     <p>
-                        I was a PhD student at <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team in <a
+                        I'm a Computer Vision Engineer at <a
+                            href="https://diffuse.ly/">Diffusely</a>, working on the <a
+                            href="https://www.propershot.com/">ProperShot</a> product.
+                        I completed my PhD with the <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team
+                        at <a
                             href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a>,
-                        under the supervision of <a
+                        advised by <a
                             href="https://avrithis.net/">Yannis Avrithis</a>.
-                        I received my BS and MS degrees from Electronics Engineering at <a
-                            href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research interest
-                        cover vision and language applications,
-                        focusing on video understanding and video question answering.</p>
+                        I received my BS and MS degrees in Electronics Engineering from <a
+                            href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research
+                        interests include vision and language applications, focusing on video understanding, video
+                        question answering, and controllable image generation.
+                    </p>
                     <p style="text-align:left">
                         <a href="mailto:denizengin255@gmail.com">Email</a> &nbsp/&nbsp
-                        <a href="cv/DenizEnginCV.pdf">CV</a> &nbsp/&nbsp
                         <a href="https://scholar.google.com/citations?user=5GQk5LUAAAAJ&hl">Google Scholar</a>
                         &nbsp/&nbsp
                         <a href="https://x.com/enginde_">Twitter</a> &nbsp/&nbsp
@@ -125,6 +128,9 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
+                        <li>Feb. 2024 - I joined <a
+                                href="https://diffuse.ly/">Diffusely</a> as a Computer Vision Engineer.
+                        </li>
                         <li>Jun. 2024 - I have successfully defended my <a href="thesis/DenizEngin_PhDThesis.pdf">PhD
                             thesis</a>!
                         </li>
@@ -238,20 +244,6 @@
                         </div>
                     </div>
 
-                    <!--                    <div class="bibtex">-->
-                    <!--                        <div style="width:50%">-->
-                    <!--                        </div>-->
-                    <!--                        <div class="right-col">-->
-                    <!--                            <p class="excerpt">-->
-                    <!--                            <p>@inproceedings{engin_2023_ICCV,-->
-                    <!--                                title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},-->
-                    <!--                                author={Engin, Deniz and Avrithis, Yannis},-->
-                    <!--                                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision-->
-                    <!--                                (ICCV) Workshops},-->
-                    <!--                                year={2023}</p>-->
-                    <!--                            </p>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
 
                 </li>
 
@@ -298,20 +290,6 @@
                         </div>
                     </div>
 
-                    <!--                    <div class="bibtex">-->
-                    <!--                        <div style="width:50%">-->
-                    <!--                        </div>-->
-                    <!--                        <div class="right-col">-->
-                    <!--                            <p class="excerpt">-->
-                    <!--                            <p>@inproceedings{engin_2023_ICCV,-->
-                    <!--                                title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},-->
-                    <!--                                author={Engin, Deniz and Avrithis, Yannis},-->
-                    <!--                                booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision-->
-                    <!--                                (ICCV) Workshops},-->
-                    <!--                                year={2023}</p>-->
-                    <!--                            </p>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
 
                 </li>
 
