--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <p>
                         I'm a Computer Vision Engineer at <a
                             href="https://diffuse.ly/">Diffusely</a>, working on the <a
-                            href="https://www.propershot.com/">ProperShot</a> product.
+                            href="https://www.propershot.com/">ProperShot</a>.
                         I completed my PhD with the <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team
                         at <a
                             href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a>,
