--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p class="excerpt">
                     <p>
                         I'm a Computer Vision Engineer at <a
-                            href="https://diffuse.ly/">Diffusely</a>, working on the <a
+                            href="https://diffuse.ly/">Diffusely</a>, working on <a
                             href="https://www.propershot.com/">ProperShot</a>.
                         I completed my PhD with the <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team
                         at <a
