--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Deniz Engin">
-    <meta name="twitter:description" content="Deniz Engin Twitter">
-    <meta name="twitter:creator" content="Deniz Engin">
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Deniz Engin">
+    <meta property="og:description" content="Deniz Engin | Bluesky Profile">
+    <meta property="og:url" content="https://bsky.app/profile/enginde.bsky.social">
+    <meta property="og:site_name" content="Bluesky">
 
 
     <meta property="og:type" content="article">
@@ -102,7 +103,7 @@
                         <a href="mailto:denizengin255@gmail.com">Email</a> &nbsp/&nbsp
                         <a href="https://scholar.google.com/citations?user=5GQk5LUAAAAJ&hl">Google Scholar</a>
                         &nbsp/&nbsp
-                        <a href="https://x.com/enginde_">Twitter</a> &nbsp/&nbsp
+                        <a href="https://bsky.app/profile/enginde.bsky.social">Bluesky</a> &nbsp/&nbsp
                         <a href="https://www.linkedin.com/in/denizenginn">LinkedIn</a> &nbsp/&nbsp
                         <a href="https://github.com/engindeniz">GitHub</a>
                     </p>
